--- a/index-2.html
+++ b/index-2.html
@@ -4,7 +4,7 @@
 
     <title>SOLUTIONS pdm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Responsive One Page Parallax Template" />
+    <meta name="description" content="SPDMParallax" />
     <meta name="author" content="ClaPat Studio">
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
